<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nowTemperature1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nowTemperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/nowWeatherImage1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_weight="1"
            android:padding="15dp"
            app:srcCompat="@drawable/cloud" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_background"
                android:gravity="center|center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fineDust_Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/maskImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/mask256" />

                <TextView
                    android:id="@+id/fineDust1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fineDust"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/maskText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mastkText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umbrella_Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/umbrellaImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="15dp"
                    app:srcCompat="@drawable/umbrella256" />

                <TextView
                    android:id="@+id/rainfall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/umbrella"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/umbrella"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/umbrella"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/maxTopImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/tshirt256" />

                    <TextView
                        android:id="@+id/top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/top"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/maxJacketImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/jeans256" />

                    <TextView
                        android:id="@+id/bottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/bottom"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/layout_background"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jacket_Title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/jacket256" />

                    <TextView
                        android:id="@+id/outerClothing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/jacket"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>