<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nowTemperature2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nowTemperature"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/nowWeatherImage2"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="15dp"
                app:srcCompat="@drawable/cloud" />


        </LinearLayout>

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/maxTemperature_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/maxTemperature_Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/maxTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/maxTopImage"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/tshirt128" />

                    <TextView
                        android:id="@+id/maxTop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/maxTop"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/maxJacketImage"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/jacket128" />

                    <TextView
                        android:id="@+id/maxOuterClothing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/maxJacket"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp">


            <TextView
                android:id="@+id/minTemperature_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/minTemperature_Title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/minTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/minTopImage"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/tshirt128" />

                    <TextView
                        android:id="@+id/minTop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/minTop"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/minJacketImage"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/jacket128" />

                    <TextView
                        android:id="@+id/minOuterClothing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/minJacket"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/fineDust_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fineDust_Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fineDustImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/mask256" />

                <TextView
                    android:id="@+id/fineDustTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fineDustTitle"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/fineDust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fineDust"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ultraFineDustImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/gas_mask128" />

                <TextView
                    android:id="@+id/ultraFineDustTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ultraFineDustTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/ultraFineDust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultraFineDust"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>